chanched index.html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,7 @@
     <title>pandey first title of tool -4 c7</title>
 </head>
 <body>
+	 <p> i am paragraph </p>
     
 </body>
 </html>
