--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <meta name="viewport" contenk="width=device-width, initial-scale=1.0">
     <title>pandey_website_feature</title>
 
-</head>    
+</head><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Main Heading</h1>
+    <p>this is my paragraph</p>
+    <button> click Here</button>
+    <div>
+        this is my div.
+    </div>
+    
+</body>
+</html>    
 
 
     
