remove swp & add new Index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Main Heading</h1>
     <p>this is my paragraph</p>
-    <button> click Here</button>
+    <button> click on Here</button>
     <div>
         this is my div.
     </div>
