--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <h1>Main Heading</h1>
+    <h2>open-me</h2>
     <p>this is my paragraph</p>
     <button> click on Here</button>
     <div>
